--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -6,7 +6,6 @@
     <string name="error_field_required">请填写此项</string>
     <string name="error_incorrect_password">密码错误</string>
     <string name="prompt_password">密码</string>
-    <string name="action_settings">设置</string>
     <string name="navigation_drawer_close">关闭</string>
     <string name="navigation_drawer_open">打开</string>
     <string name="title_activity_main">智能路由器</string>
@@ -23,4 +22,5 @@
     <string name="nav_rate">评分</string>
     <string name="mail_subject">智能路由器</string>
     <string name="share_text">智能路由器，设置路由器的简单安卓应用！</string>
+    <string name="action_about">关于</string>
 </resources>
