--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
     <string name="error_invalid_url">Invalid URL</string>
     <string name="tjpu">TJPU</string>
     <string name="press_again_exit_app">Press again exit app</string>
